--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -2,7 +2,6 @@
 
 ===Etymology===
 Old English ''[[sūcan]]''
-Alec is sucky
 
 ===Pronunciation===
 *{{audio|en-us-suck.ogg|Audio (US)}}
@@ -14,7 +13,7 @@ Alec is sucky
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # To draw into, by any means, with an attractive force, usually without direct contact
-# {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.'' "Alec sucks at life"
+# {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
 # To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
@@ -96,7 +95,6 @@ Alec is sucky
 *'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
 ----
-"Alec sucks" William Barnard and Dylan on WWW.facebook.com where there are related groups to this topic.  Alec sucks has also become a religion in many parts of the world.
 
 ==Swedish==
 
