--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -16,7 +16,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 # A person or thing that is the best example of a certain profession or some doing.
 #:''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
 # A small picture which represents something (such as an icon on a computer screen which when clicked performs some function.)
-# {{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoetic]] words are necessarily all icons.  See also [[symbol]] and [[index]].
+# {{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.  See also [[symbol]] and [[index]].
 
 ====Related terms====
 *[[iconic]]
