--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -9,26 +9,30 @@
 * {{audio|en-us-pull.ogg|Audio (US)}}
 *: Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
 
-===Transitive verb===
-{{rfc-trverb|Transitive verb}}
+===Verb===
 {{en-verb}}
 
-# To apply a [[force]] to (an object) such that it comes [[toward]] the person or thing applying the force.
-# {{context|slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
+# {{transitive}} To apply a [[force]] to (an object) such that it comes [[toward]] the person or thing applying the force.
+# {{transitive}} {{context|slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
 #: ''He's pulled that bird over there.''
-# to [[remove]] (something), especially from public [[circulation]] or [[availability]]
+# {{transitive}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
 #: ''Each day, they pulled the old bread and set out fresh loaves.''
-# {{context|informal}} to [[do]] or [[perform]]
+# {{transitive}} {{context|informal}} to [[do]] or [[perform]]
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
-# To [[retrieve]] or [[generate]] for use.
+# {{transitive}} To [[retrieve]] or [[generate]] for use.
 #: ''I'll have to '''pull''' a part number for that.''
+# {{intransitive}} To apply a force such that an object comes toward the person or thing applying the force.
+#: ''You're going to have to pull harder to get that cork out of the bottle.''
+# {{intransitive}}{{context|slang}} To succeed in finding a person with whom to have sex.
+
 
 ====Synonyms====
 * (''apply force to (something) so it comes toward''): [[drag]], [[tow]], [[tug]], [[yank]]
-* {{i-c|slang: persuade to have sex with one}}
-* {{i-c|remove from circulation}} [[recall]], [[withdraw]], [[yank]]
+* {{i-c|slang: to persuade to have sex with one}} [[score]]
+* {{i-c|to remove from circulation}} [[recall]], [[withdraw]], [[yank]]
 * {{i-c|to do|to perform}} [[carry out]], [[complete]], [[do]], [[execute]], [[perform]]
-* {{i-c|retrieve or generate for use}} [[generate]], [[get]], [[get hold of]], [[get one's hands on]], [[lay one's hands on]], [[obtain]], [[retrieve]]
+* {{i-c|to retrieve or generate for use}} [[generate]], [[get]], [[get hold of]], [[get one's hands on]], [[lay one's hands on]], [[obtain]], [[retrieve]]
+* {{i-c| to succeed in finding a person with whom to have sex.}} [[score]]
 
 ====Antonyms====
 * (''apply force to (something) so it comes towards one''): [[push]], [[repel]], [[shove]]
@@ -105,17 +109,6 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-===Intransitive verb===
-{{en-verb}}
-
-# To apply a force such that an object comes toward the person or thing applying the force.
-#: ''You're going to have to pull harder to get that cork out of the bottle.''
-# {{context|slang}} To succeed in finding a person with whom to have sex.
-
-====Synonyms====
-* {{i-c|slang: succeed in finding a person with whom to have sex}} [[score]]
-
-====Translations====
 {{trans-top|apply force such that an object comes toward the person or thing applying the force}}
 * Esperanto: {{t-|eo|tiri|xs=Esperanto}}
 * Finnish: {{t+|fi|vetää}}
