--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -32,7 +32,7 @@
 {{rfc-header|Verbal noun}}
 '''Hamstring''' ''c''
 
-# The act of buying large supplies of something which is belived to become more expensive or more difficult to get at in the near future.
+# The act of buying large supplies of something which is believed to become more expensive or more difficult to get at in the near future.
 
 [[io:hamstring]]
 [[pl:hamstring]]
