--- a/en/坫/坫.13038.wikitext
+++ b/en/坫/坫.13038.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4116<sub>0</sub>|canj=土卜口 (GYR)}}
 
-# a stand on which to replace goblets after drinking
+# a [[stand]] on which to replace [[goblet]]s after drinking
 
 ====References====
 * {{Han ref|kx=0226.240|dkj=04979|dj=0462.020|hdz=10430.120|uh=576B|ud=22379|bh=CBF5|bd=52213}}
