--- a/en/傜/傜.11183.wikitext
+++ b/en/傜/傜.11183.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2727<sub>2</sub>|canj=人月人山 (OBOU)}}
+
 # a minority tribe
+
 ====References====
-{{Han ref|kx=0113.260|dkj=00971|dj=0241.150|hdz=10203.200|uh=509C|ud=20636|bh=D85C|bd=55388}}
+* {{Han ref|kx=0113.260|dkj=00971|dj=0241.150|hdz=10203.200|uh=509C|ud=20636|bh=D85C|bd=55388}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yiu4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō)|kun=[[ふぞろい]] (fuzoroi), [[えだち]] (edachi), [[つかい]] (tsukai)}}
+* {{ja-readings|on=[[よう]] (yō)|kun=[[ふぞろい]] (fuzoroi), [[えだち]] (edachi), [[つかい]] (tsukai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tà]] ([[ta4]]), [[yáo]] ([[yao2]])|wg=t'a<sup>4</sup>, yao<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傜]]
