--- a/en/旤/旤.16909.wikitext
+++ b/en/旤/旤.16909.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=71|rad=无|as=09|sn=13|four=|canj=月月一女山 (BBMVU)}}
+
 # {{defn|Han|sort=无09}}
+
 ====References====
-{{Han ref|kx=0485.350|dkj=13730|dj=0848.120|hdz=21148.070|uh=65E4|ud=26084}}
+* {{Han ref|kx=0485.350|dkj=13730|dj=0848.120|hdz=21148.070|uh=65E4|ud=26084}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huò]] ([[huo4]]), [[mì]] ([[mi4]])|wg=huo<sup>4</sup>, mi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旤]]
