--- a/en/愋/愋.15647.wikitext
+++ b/en/愋/愋.15647.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9204<sub>7</sub>|canj=心月一水 (PBME)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0394.170|dkj=10917|dj=0730.240|hdz=42329.140|uh=610B|ud=24843|bh=D950|bd=55632}}
+* {{Han ref|kx=0394.170|dkj=10917|dj=0730.240|hdz=42329.140|uh=610B|ud=24843|bh=D950|bd=55632}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xuān]] ([[xuan1]])|wg=hsüan<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愋]]
