--- a/en/惩/惩.15614.wikitext
+++ b/en/惩/惩.15614.wikitext
@@ -1,21 +1,31 @@
 {{see|懲}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=|canj=竹一心 (HMP)}}
+
 # [[punish]], [[reprimand]]
 # [[warn]]
+
 ====References====
-{{Han ref|kx=0392.181|dkj=10851|hdz=42311.130|uh=60E9|ud=24809}}
+* {{Han ref|kx=0392.181|dkj=10851|hdz=42311.130|uh=60E9|ud=24809}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ching4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=懲|pin=[[chéng]] ([[cheng2]])|wg=ch'eng<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惩]]
