--- a/en/圲/圲.12980.wikitext
+++ b/en/圲/圲.12980.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土竹十 (GHJ)}}
+
 # {{defn|Han|sort=土03}}
+
 ====References====
-{{Han ref|kx=0224.130|dkj=04892|hdz=10419.070|uh=5732|ud=22322}}
+* {{Han ref|kx=0224.130|dkj=04892|hdz=10419.070|uh=5732|ud=22322}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiān]] ([[qian1]])|wg=ch'ien<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圲]]
