--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -46,16 +46,16 @@
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
-* {{trreq|Afrikaans}}
+* Afrikaans: [[brug]]
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
 * Arabic: {{Arab|[[كوبري]]}} (kúbri)
 * {{trreq|Armenian}}
 * [[Basque]]: [[zubi]]
 * {{trreq|Belarusian}}
-* {{trreq|Bengali}}
+* Bengali: [[পুল]]
 * Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 * [[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
-* {{trreq|Bulgarian}}
+* Bulgarian: [[мост]]
 * {{trreq|Burmese}}
 * [[Catalan]]: [[pont#Catalan|pont]]
 * CJKV Characters: [[橋]]
@@ -73,10 +73,10 @@
 * Georgian: [[ხიდი]] (xidi)
 * German: {{t+|de|Brücke|f}}
 * Greek: [[γέφυρα]] (yéfira)
-* {{trreq|Gujarati}}
-* {{trreq|Hawaiian}}
+* Gujarati: [[પુલ]]
+* Hawaiian: [[uapo]]
 * Hebrew: {{t-|he|גשר|m|tr=gesher|sc=Hebr}}
-* {{trreq|Hindi}}
+* Hindi: [[पुल]]
 * Hungarian: {{t+|hu|híd}}
 * Icelandic: {{t+|is|brú|f}}
 * [[Ido]]: [[ponto]]
@@ -106,10 +106,10 @@
 * [[Occitan]]: [[pònt]]
 * Old English: {{t-|ang|brycg|f|xs=Old English}}
 * {{trreq|Oriya}}
-* {{trreq|Persian}}
+* Persian: [[پل]]
 * Polish: {{t+|pl|most|m}}
 * Portuguese: {{t+|pt|ponte|f}}
-* {{trreq|Punjabi}}
+* Punjabi: [[ਪੁਲ]]
 * Romanian: [[pod]] [[punte]]
 * Russian: {{t+|ru|мост|m|tr=most|sc=Cyrl}}
 * Serbian:
@@ -117,13 +117,13 @@
 *: Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}} ''(arch./poetic)''
 * [[Romansch]]: [[punt]] {{m}}
 * {{trreq|Samoan}}
-* {{trreq|Sanskrit}}
+* Sanskrit: [[सेतुः]]
 * [[Scottish Gaelic]]: [[drochaid]] {{f}}
 * {{trreq|Sinhala}}
 * Slovak: {{t-|sk|most|m}}
 * Slovene: {{t+|sl|most|m}}
 * Spanish: [[puente]] {{m}}, [[bóveda]] {{f}} (''El Salvador'')
-* {{trreq|Swahili}}
+* Swahili: [[daraja]]
 * Swedish: {{t+|sv|bro|c}}
 * {{trreq|Tahitian}}
 * [[Tamazight]]: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
