--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -237,7 +237,7 @@
 #: ''With enough cable, we can '''bridge''' this gorge.''
 # {{idiomatic}} To [[span]] as if with a bridge.
 #: ''The two groups were able to '''bridge''' their differences.''
-# To transition from one piece of music to another without stopping.
+# {{music}} To [[transition]] from one piece or section of music to another without stopping.
 #: ''We need to bridge that [[jam]] into "The Eleven".''
 
 [[Category:1000 English basic words]]
