--- a/en/値/値.11033.wikitext
+++ b/en/値/値.11033.wikitext
@@ -1,27 +1,42 @@
 {{see|值}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人十月女 (OJBV), X人十月女 (XOJBV)}}
+
 # price, cost, worth
+
 ====References====
-{{Han ref|kx=0108.150|dkj=00786|dj=0231.050|hdz=10171.081|uh=5024|ud=20516}}
+* {{Han ref|kx=0108.150|dkj=00786|dj=0231.050|hdz=10171.081|uh=5024|ud=20516}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=6|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[ちょく]] (choku)|kun=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
+* {{ja-readings|on=[[ち]] (chi), [[ちょく]] (choku)|kun=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kǒng]] ([[kong3]]), [[zhí]] ([[zhi2]])|wg=k'ung<sup>3</sup>, chih<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:値]]
