--- a/en/偱/偱.11137.wikitext
+++ b/en/偱/偱.11137.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人竹十山 (OHJU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.310|dkj=00894|dj=0238.040|hdz=10192.110|uh=5071|ud=20593}}
+* {{Han ref|kx=0111.310|dkj=00894|dj=0238.040|hdz=10192.110|uh=5071|ud=20593}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅん]] (shun)|kun=[[のべる]] (noberu)}}
+* {{ja-readings|on=[[しゅん]] (shun)|kun=[[のべる]] (noberu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xún]] ([[xun2]])|wg=hsün<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偱]]
