--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -15,10 +15,10 @@ From {{L.}} {{term|lang=la|id est||that is}}.
 #: ''The three U.S. states on the west coast ('''i.e.''' Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
-*Use '''i.e.''' to explain or clarify a statement by either (exhaustively) listing options or by rephrasing the previous statement.
-*American English demands a comma after '''i.e.'''; in British English comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
-*Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''.
-*'''ie:''' is often found in current usage, and is perhaps now considered acceptable.
+* Use '''i.e.''' to explain or clarify a statement by either (exhaustively) listing options or by rephrasing the previous statement.
+* American English demands a comma after '''i.e.'''; in British English comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
+* Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''.
+* '''ie:''' is often found in current usage, and is perhaps now considered acceptable.
 
 ====Translations====
 {{trans-top|that is}}
@@ -34,7 +34,7 @@ From {{L.}} {{term|lang=la|id est||that is}}.
 {{trans-mid}}
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
 * Italian: {{t+|it|cioè}}
-* Malayalam: [[അതായത്]] (athaayathu)
+* [[Malayalam]]: [[അതായത്]] (athaayathu)
 * Norwegian: [[dvs.]]
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
 * Portuguese: [[isto é]]
