--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -142,6 +142,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[kk:find]]
 [[ku:find]]
 [[hu:find]]
+[[nl:find]]
 [[ja:find]]
 [[pl:find]]
 [[pt:find]]
