--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人竹X水 (OHXE)}}
+
 # old man
+
 ====References====
-{{Han ref|kx=0112.090|dkj=00929|hdz=10192.060|uh=5081|ud=20609}}
+* {{Han ref|kx=0112.090|dkj=00929|hdz=10192.060|uh=5081|ud=20609}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=[[おきな]] (okina)}}
+* {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=[[おきな]] (okina)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fū]] ([[fu1]]), [[sǒu]] ([[sou3]])|wg=fu<sup>1</sup>, sou<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傁]]
