--- a/en/偊/偊.11098.wikitext
+++ b/en/偊/偊.11098.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人竹中月 (OHLB)}}
+
 # to walk alone
 # self-reliant
+
 ====References====
-{{Han ref|kx=0110.060|dkj=00838|dj=0235.010|hdz=10192.090|uh=504A|ud=20554|bh=D459|bd=54361}}
+* {{Han ref|kx=0110.060|dkj=00838|dj=0235.010|hdz=10192.090|uh=504A|ud=20554|bh=D459|bd=54361}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yu5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[う]] (u), [[く]] (ku)|kun=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)}}
+* {{ja-readings|on=[[う]] (u), [[く]] (ku)|kun=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=유|rv=yu|mr=yu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǔ]] ([[yu3]])|wg=yü<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偊]]
