--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -109,6 +109,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 [[io:icon]]
 [[kk:icon]]
 [[la:icon]]
+[[hu:icon]]
 [[pl:icon]]
 [[ru:icon]]
 [[fi:icon]]
