--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土卜一 (GYM)}}
+
 # {{defn|Han|sort=土03}}
+
 ====References====
-{{Han ref|kx=0224.170|dkj=04896|dj=0459.020|hdz=10419.040|uh=5735|ud=22325}}
+* {{Han ref|kx=0224.170|dkj=04896|dj=0459.020|hdz=10419.040|uh=5735|ud=22325}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dàng]] ([[dang4]])|wg=tang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圵]]
