--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=7221<sub>4</sub>|canj=竹口土 (HRG)}}
+
 # used in place names
+
 ====References====
-{{Han ref|kx=0228.010|dkj=05059|dj=0464.130|hdz=10440.020|uh=5795|ud=22421|bh=CE5E|bd=52830}}
+* {{Han ref|kx=0228.010|dkj=05059|dj=0464.130|hdz=10440.020|uh=5795|ud=22421|bh=CE5E|bd=52830}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hau5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[あか]] (aka)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[あか]] (aka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=후|rv=hu|mr=hu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hòu]] ([[hou4]])|wg=hou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垕]]
