--- a/en/旹/旹.16929.wikitext
+++ b/en/旹/旹.16929.wikitext
@@ -1,21 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=山一日 (UMA)}}
+
 # [[time]], [[season]]
 # [[era]], [[age]], [[period]]
+
 ====References====
-{{Han ref|kx=0490.230|dkj=13773|dj=0851.230|hdz=21496.090|uh=65F9|ud=26105}}
+* {{Han ref|kx=0490.230|dkj=13773|dj=0851.230|hdz=21496.090|uh=65F9|ud=26105}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[じ]] (ji)|kun=[[とき]] (toki)}}
+* {{ja-readings|on=[[じ]] (ji)|kun=[[とき]] (toki)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[shí]] ([[shi2]])|wg=shih<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旹]]
