--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -38,6 +38,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 {{trans-top|encounter}}
 * Arabic: [[وَجَدَ]]
 * [[Crimean Tatar]]: [[tapmak]]
+* Czech: [[nalézt]], [[najít]]
 * Danish: [[finde]], [[træffe]]
 * Dutch: [[vinden]], [[aantreffen]]
 * Esperanto: [[trovi]]
