--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -19,14 +19,14 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 {{en-verb|finds|finding|found|'''[[found]]''' or archaic '''[[founden]]'''}}
 
 # {{transitive}} To [[encounter]], to [[discover]].
-#: ''Project Gutenberg finds that Find is the 190th most important word in the English language.
-#: ''I found my car keys -- they were under the couch.''
+#: ''Project Gutenberg '''finds''' that Find is the 190th most important word in the English language.
+#: ''I '''found''' my car keys -- they were under the couch.''
 # {{transitive}} To [[point out]].
-#: ''He kept finding faults with my work.''
+#: ''He kept '''finding''' faults with my work.''
 # {{transitive}} To decide that, to form the [[opinion]] that.
-#: ''I find your argument unsatisfactory.''
+#: ''I '''find''' your argument unsatisfactory.''
 # {{transitive}} To [[determine]] or [[judge]].
-#: ''The jury finds for the defendant''
+#: ''The jury '''finds''' for the defendant''
 
 ====Derived terms====
 ''See also'' '''[[finding]]''' ''and'' '''[[found]]'''
