--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=7733<sub>4</sub>|canj=竹水心 (HEP)}}
+
 # [[careful]], [[anxious]], [[attentive]]
+
 ====References====
-{{Han ref|kx=0397.230|dkj=11045|dj=0736.160|hdz=42334.060|uh=6147|ud=24903|bh=B9FE|bd=47614}}
+* {{Han ref|kx=0397.230|dkj=11045|dj=0736.160|hdz=42334.060|uh=6147|ud=24903|bh=B9FE|bd=47614}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[いん]] (in)|kun=[[いたむ]] (itamu), [[ねんごろ]] (nengoro)}}
+* {{ja-readings|on=[[いん]] (in)|kun=[[いたむ]] (itamu), [[ねんごろ]] (nengoro)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=은|eumhun=|rv=eun|mr=ŭn|y=un}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yīn]] ([[yin1]])|wg=yin<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慇]]
