--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -1,27 +1,35 @@
 {{see|暎}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6403<sub>4</sub>|canj=日中月大 (ALBK)|ids=⿰[[日]][[央]]}}
+
 # [[project]]
 # [[reflect]] light
+
 ====References====
-{{Han ref|kx=0493.010|dkj=13838|dj=0856.010|hdz=21500.060|uh=6620|ud=26144|bh=AC4D|bd=44109}}
+* {{Han ref|kx=0493.010|dkj=13838|dj=0856.010|hdz=21500.060|uh=6620|ud=26144|bh=AC4D|bd=44109}}
 
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ying2}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=6|rs=日05}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えい]] (ei), [[よう]] (yō)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
+* {{ja-readings|on=[[えい]] (ei), [[よう]] (yō)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
 
 ====Compounds====
 * [[映画]]
@@ -29,15 +37,21 @@
 * [[映像]]
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=영|eumhun=|rv=yeong|mr=yŏng|y=yeng}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yìng]] ([[ying4]])|wg=ying<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
