--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4714<sub>0</sub>|canj=土月卜 (GBY)}}
+
 # [[collapse]]
 # [[landslide]]
+
 ====References====
-{{Han ref|kx=0225.100|dkj=04927|dj=0460.030|hdz=10425.050|uh=574D|ud=22349|bh=A77E|bd=42878}}
+* {{Han ref|kx=0225.100|dkj=04927|dj=0460.030|hdz=10425.050|uh=574D|ud=22349|bh=A77E|bd=42878}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=taan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たん]] (tan), [[とん]] (ton)|kun=}}
+* {{ja-readings|on=[[たん]] (tan), [[とん]] (ton)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=담|rv=dam|mr=tam}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tān]] ([[tan1]])|wg=t'an<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坍]]
