--- a/en/愡/愡.15668.wikitext
+++ b/en/愡/愡.15668.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=心心大心 (PPKP)}}
+
 # absent-minded, confused
+
 ====References====
-{{Han ref|kx=0395.260|dkj=10956|dj=0734.020|hdz=42330.110|uh=6121|ud=24865}}
+* {{Han ref|kx=0395.260|dkj=10956|dj=0734.020|hdz=42330.110|uh=6121|ud=24865}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=}}
+* {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lèng]] ([[leng4]]), [[zǒng]] ([[zong3]])|wg=leng<sup>4</sup>, tsung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愡]]
